# claude-code-config

./: .gitignore  CONFIG-COMPLETION.md  smart-commit.md
.claude/hooks/logging/: db_writer.py  pyproject.toml  universal_hook_logger.py
apps/core/: .dockerignore  .env.sample  Makefile  __init__.py  docker-compose.yml  pyproject.toml
apps/core/agents/sessions/refactor-frontend-db-access/: dev-notes.json  plan.json  spec.md  state.json
apps/core/api/: dependencies.py  main.py
apps/core/api/routers/: __init__.py  agents.py  projects.py  sessions.py
apps/core/backend/: .dockerignore  .env.example  Dockerfile  __init__.py  alembic.ini  main.py  pyproject.toml  requirements.txt
apps/core/backend/agent/: __init__.py  session_agent.py
apps/core/backend/alembic/: env.py
apps/core/backend/alembic/versions/: d42fcc90d180_initial_schema.py
apps/core/backend/mcp_tools/: server.py  session_tools.py
apps/core/backend/routers/: projects.py
apps/core/backend/src/: dependencies.py  main.py
apps/core/backend/src/agent/: session_agent.py  spec_agent_service.py
apps/core/backend/src/database/: __init__.py  async_sync.py  connection.py  crud.py  sync.py
apps/core/backend/src/database/models/: __init__.py  interactive_message.py
apps/core/backend/src/mcp_tools/: __init__.py
apps/core/backend/src/routers/: __init__.py  chat.py  sessions.py
apps/core/backend/src/state_manager/: __init__.py  models.py
apps/core/backend/src/task_pool/: __init__.py  callbacks.py  task_pool.py
apps/core/backend/state_manager/: exceptions.py  state_manager.py
apps/core/backend/state_manager/tests/: __init__.py  test_callback.py  test_state_manager.py
apps/core/backend/task_pool/: callbacks.py
apps/core/backend/task_pool/tests/: __init__.py  test_integration.py  test_task_pool.py
apps/core/backend/tests/: __init__.py  conftest.py
apps/core/backend/tests/database/: conftest.py  test_async_sync.py  test_sync.py
apps/core/backend/tests/state_manager/: test_callback.py  test_state_manager.py
apps/core/backend/tests/task_pool/: test_integration.py  test_task_pool.py
apps/core/frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  drizzle.config.ts  package-lock.json  package.json
apps/core/frontend/drizzle/: 0000_nebulous_ultragirl.sql  relations.ts  schema.ts
apps/core/frontend/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/core/frontend/src/app/: globals.css  layout.tsx
apps/core/frontend/src/app/projects/: page.tsx
apps/core/frontend/src/components/chat/: AskUserQuestion.tsx  ChatPanel.tsx  MessageBubble.tsx  ToolActivity.tsx  index.ts
apps/core/frontend/src/db/: index.ts  relations.ts  schema.ts  types.ts
apps/core/frontend/src/lib/: agents-api.ts  api.ts  chat-api.ts  projects-api.ts  session-sync.ts  sessions-api.ts
apps/core/frontend/src/store/: projects.ts  sessions.ts
apps/core/frontend/src/types/: agent.ts  index.ts  plan.ts  project.ts  session.ts
apps/core/scripts/: init-db.sql
apps/core/session_db/: .env.sample  README.md  __init__.py  alembic.ini  async_sync.py  crud.py  database.py  models.py  pyproject.toml  sync.py
apps/core/session_db/alembic/: env.py
apps/core/session_db/models/: __init__.py  agent_log.py  project.py  session.py
apps/core/session_db/scripts/: init-db.sql
apps/core/session_db/src/session_db/: __init__.py  crud.py  database.py  sync.py
apps/core/session_db/tests/: __init__.py  conftest.py  test_async_sync.py  test_sync.py
apps/core/state_manager/: __init__.py  state_manager.py
apps/core/state_manager/tests/: conftest.py  test_state_manager.py
(+370 files in other folders)
