[project]
name = "lai-hook-logging"
version = "0.1.0"
description = "Database logging for Claude Code hooks"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "sqlmodel>=0.0.22",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
