[project]
name = "lai-backend"
version = "0.1.0"
description = "LAI Session Manager - FastAPI backend service"
requires-python = ">=3.12"
dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",

    # Database (via session-db, but sqlmodel needed for type hints)
    "sqlmodel>=0.0.22",

    # Agent SDK
    "claude-agent-sdk>=0.1.36",

    # Local packages
    "session-db",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.uv.sources]
# In development, use sibling session_db package
session-db = { path = "../session_db", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
